Fix bg size on mobile

--- a/app/assets/stylesheets/styles/index.css.scss
+++ b/app/assets/stylesheets/styles/index.css.scss
@@ -1,4 +1,6 @@
 #welcome {
+  background-size: cover;
+  
   h1 {
     cursor: pointer;
   }
